src/objects/Account_Plan__c.object
<CustomObject>
    <description>Custom object for Account Plans -Strategic Accounts (LMS)</description>
    <fields>
        <fullName>AP_Effective_Year__c</fullName>
        <description>Unique identifier for LMS Account Plans</description>
        <displayFormat>AP-{0}-{MM}-{YYYY}</displayFormat>
        <inlineHelpText>Unique identifier for LMS Account Plans</inlineHelpText>
        <label>AP Effective Year</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_History__c</fullName>
        <description>What has been done with the account so far?</description>
        <inlineHelpText>What has been done with the account so far?</inlineHelpText>
        <label>Account History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Type__c</fullName>
        <description>LMS Account Plan Type</description>
        <inlineHelpText>LMS Account Plan Type</inlineHelpText>
        <label>Account Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Team_Health_Rating_Change_Date__c</fullName>
        <description>SFDC Enhancement requested by Mike Gettman. Please refer the Release Component RC-32335 link below. 
https://linkedin.my.salesforce.com/a1W3200000EWJOz</description>
        <label>Account Team Health Rating Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Team_Health_Rating__c</fullName>
        <description>SFDC Enhancement requested by Mike Gettman. Please refer the Release Component RC-32335 link below. 
https://linkedin.my.salesforce.com/a1W3200000EWJOz</description>
        <inlineHelpText>Account health according to RM/CSM intuition</inlineHelpText>
        <label>Account Team Health Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Team_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be populated when Account Team having specific Account Roles - AE/RM/Specialist/Hybrid as per Lynda (Q2O Req 10)</description>
        <label>Account Team Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounts_they_re_trying_to_Win_Defend__c</fullName>
        <inlineHelpText>Name the accounts that are most important to this agency</inlineHelpText>
        <label>Accounts Agency Trying to Win/Defend</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount_USD__c</fullName>
        <description>Created as per case : 06842281</description>
        <label>Amount USD(At-Risk or Upside)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 5,000</fullName>
                </value>
                <value>
                    <fullName>5,000-10,000</fullName>
                </value>
                <value>
                    <fullName>10,000-30,000</fullName>
                </value>
                <value>
                    <fullName>30,000-100,000</fullName>
                </value>
                <value>
                    <fullName>&gt;100,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_at_Risk__c</fullName>
        <description>How much is at risk in dollars?</description>
        <inlineHelpText>How much is at risk (in USD)?</inlineHelpText>
        <label>Amount at Risk</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Dismissed</fullName>
                </value>
                <value>
                    <fullName>Insufficient Information</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <isActive>false</isActive>
                    <label>In Progress</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHI__c</fullName>
        <formula>Plan_Account__r.Insights__r.LSS_CHI_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CHI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSM_Status__c</fullName>
        <description>created as per case requirement : Case: 07681358,</description>
        <label>CSM Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed - Action Steps Completed</fullName>
                </value>
                <value>
                    <fullName>Completed - Customer Unresponsive (+1 month)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Challenges__c</fullName>
        <inlineHelpText>Describe challenges this company is encountering or commercial opportunities it is pursuing.</inlineHelpText>
        <label>CSM User Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Churn_Risk__c</fullName>
        <description>Field used by the customer success organization to lookup the churn risk on the account level.</description>
        <formula>Plan_Account__r.Churn_Risk__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This information is filled in automatically based on the Churn 
Risk on the account.</inlineHelpText>
        <label>Churn Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Common_Objectives__c</fullName>
        <inlineHelpText>List any common marketing objectives seen from advertisers in this category</inlineHelpText>
        <label>Common Objectives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Common_Opportunities__c</fullName>
        <inlineHelpText>Name the key growth areas that CEOs/CMOs are talking about</inlineHelpText>
        <label>Opportunities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <inlineHelpText>List top competitors.  Relate at the LOB level where appropriate</inlineHelpText>
        <label>Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed_Tracking__c</fullName>
        <label>Confirmed Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Reached out, no answer</fullName>
                </value>
                <value>
                    <fullName>Reached out, no tracking</fullName>
                </value>
                <value>
                    <fullName>Reached out, tracking confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacts_and_Relationships__c</fullName>
        <description>Who are you connected with, what is your status with them, what is your relationship?</description>
        <inlineHelpText>Who are your connections and what are their roles in the relationship? What is your relationship strength with each?</inlineHelpText>
        <label>Contacts and Relationships</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Businesses__c</fullName>
        <inlineHelpText>Describe the industries/sub-industries in which they compete.  Be as specific as possible (e.g. &quot;CRM software instead&quot; of &quot;Enterprise Tech&quot;</inlineHelpText>
        <label>Current Businesses</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Relationship_Status__c</fullName>
        <inlineHelpText>Concise description of current standing including areas of strength and weakness in the relationship</inlineHelpText>
        <label>Current Relationship Status</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Nominated__c</fullName>
        <description>Label changed as per case : 06842281</description>
        <label>Flagged By Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Define_Success__c</fullName>
        <label>Define Success</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Differentiate__c</fullName>
        <inlineHelpText>Describe how our offering and product mix can help this LOB differentiate from their competitors</inlineHelpText>
        <label>Differentiate</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dynamics_Id__c</fullName>
        <description>Orbit - Corresponding Account Plan Id from Dynamics System set by Mayflower user.</description>
        <inlineHelpText>Corresponding Account Plan Id from Dynamics System.</inlineHelpText>
        <label>Dynamics Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Earnings_Highlights__c</fullName>
        <inlineHelpText>Name the highlights the CEO/CMO provided on last earnings call.  Where are their areas of focus?</inlineHelpText>
        <label>Earnings Highlights</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entitlement_Link__c</fullName>
        <description>Launch Product Entitlement for the related Account</description>
        <formula>HYPERLINK(&quot;/apex/ProductEntitlement?id=&quot;+ Plan_Account__r.Id ,IMAGE(&quot;/resource/EntitlementButton&quot;,&quot;Entitlement&quot;,20,120),&quot;_new&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Launch Product Entitlement for Plan Account</inlineHelpText>
        <label>Entitlement Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should management be activated for this risk?</description>
        <inlineHelpText>Should leadership be activated for this risk?</inlineHelpText>
        <label>Escalation Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor_Plan__c</fullName>
        <inlineHelpText>How will we proactively engage our LinkedIn executives with influencers at this LOB?</inlineHelpText>
        <label>Executive Sponsor Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Advertiser_Must_Wins__c</fullName>
        <inlineHelpText>Name key existing advertisers</inlineHelpText>
        <label>Existing Advertiser Must Wins</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Flagged_By_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flagged By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Flagged_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flagged_By__c</fullName>
        <formula>IF(ISBLANK(Date_Nominated__c ) , &apos;&apos;, $User.FirstName + &apos; &apos; + $User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zFlagged By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focus_Agencies__c</fullName>
        <inlineHelpText>Name key agencies</inlineHelpText>
        <label>Focus Agencies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Go_Live_Status__c</fullName>
        <label>Go-Live Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Inactive-Lost</fullName>
                </value>
                <value>
                    <fullName>Won - Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Index_Change_Date__c</fullName>
        <description>SFDC Enhancement requested by Mike Gettman. Please refer the Release Component RC-32335 link below. 
https://linkedin.my.salesforce.com/a1W3200000EWJOz</description>
        <label>Health Index Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Health_Index_Rating__c</fullName>
        <description>SFDC Enhancement requested by Mike Gettman. Please refer the Release Component RC-32335 link below. 
https://linkedin.my.salesforce.com/a1W3200000EWJOz</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account health according to Health Index calculations</inlineHelpText>
        <label>Health Index Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Potential_Accounts__c</fullName>
        <inlineHelpText>List accounts we need to grow &amp; defend at this agency.  These accounts should be strategic account prospects for 2012</inlineHelpText>
        <label>High Potential Accounts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Trends__c</fullName>
        <inlineHelpText>Name the trends that are top of mind for CEOs/CMOs in this category</inlineHelpText>
        <label>Industry Trends</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Lookup to the industry of the related account.</description>
        <formula>TEXT(Plan_Account__r.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This information is filled in automatically based on the Industry 
selected on the account.</inlineHelpText>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influencer_Plan__c</fullName>
        <inlineHelpText>Describe your method for building relationships.  Relate to individual influencers where applicable</inlineHelpText>
        <label>Influencer Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Influencer_Success__c</fullName>
        <inlineHelpText>Desribe ways that we can help these influencers succeed within their organization and with marketing objectives</inlineHelpText>
        <label>Influencer Success</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initiatives__c</fullName>
        <inlineHelpText>Name any specific investments &amp; initiatives the agency is undertaking to grow business</inlineHelpText>
        <label>Initiatives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC Enhancement requested by Mike Gettman. Please refer the Release Component RC-32335 link below. 
https://linkedin.my.salesforce.com/a1W3200000EWJOz</description>
        <inlineHelpText>Determines existence of customer LMS and/or SSO integrations.</inlineHelpText>
        <label>Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used by customer success organization to define if the linked contact is the decision maker.</description>
        <inlineHelpText>Select this if the primary contact is also the main decision maker for this organisation.</inlineHelpText>
        <label>Is Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Industry_Trends__c</fullName>
        <inlineHelpText>The top 2-3 things on the mind of marketers in this industry.  Relate at the Line of Business (LOB) level where appropriate</inlineHelpText>
        <label>Key Industry Trends</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LDC_Legacy_Renewal_Plan_ID__c</fullName>
        <externalId>true</externalId>
        <label>LDC Legacy Renewal Plan ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LMS_Integration_Enabled__c</fullName>
        <label>LMS Integration Enabled?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB_Name__c</fullName>
        <label>LOB Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSS_MYD__c</fullName>
        <formula>Primary_Opportunity__r.LSS_MYD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LSS MYD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTS_CSO_Account_Tier__c</fullName>
        <label>LTS CSO Account Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Essential</fullName>
                </value>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Launches_Initiatives__c</fullName>
        <inlineHelpText>List areas where they&apos;ll be investing.  Relate at the LOB level where appropriate</inlineHelpText>
        <label>Launches &amp; Initiatives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Leaders_Incumbents__c</fullName>
        <inlineHelpText>List the top players who are defending share</inlineHelpText>
        <label>Leaders &amp; Incumbents</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Learner_Login_Instructions__c</fullName>
        <description>This field is created for Lynda One stack project

Case#08688410: Retiring Field as requested.

Case#09497769: Restoring Field as requested (11th April, 2018)</description>
        <label>Learner Login Instructions</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Learning_Culture__c</fullName>
        <description>SFDC Enhancement requested by Mike Gettman. Please refer the Release Component RC-32335 link below. 
https://linkedin.my.salesforce.com/a1W3200000EWJOz

Case#08688410: Updating the Pick list values as requested.</description>
        <inlineHelpText>Determines maturity of the customer&apos;s learning culture.</inlineHelpText>
        <label>Learning Culture</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Content mapped to competencies</fullName>
                </value>
                <value>
                    <fullName>Customer generates consistent awareness of LLS</fullName>
                </value>
                <value>
                    <fullName>Customer has L&amp;D department</fullName>
                </value>
                <value>
                    <fullName>Customer has LMS</fullName>
                </value>
                <value>
                    <fullName>Decision Maker in L&amp;D or HR</fullName>
                </value>
                <value>
                    <fullName>End users held accountible for learning</fullName>
                </value>
                <value>
                    <fullName>Employees satisfied with ability to learn new skills</fullName>
                </value>
                <value>
                    <fullName>LLS is aligned with strategic goals or objective</fullName>
                </value>
                <value>
                    <fullName>LLS supported by execs</fullName>
                </value>
                <value>
                    <fullName>Playlists/learning paths are deployed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage__c</fullName>
        <description>Lifecycle stage of the success plan for CSM organization.</description>
        <inlineHelpText>Enter the lifecycle stage the customer is in.</inlineHelpText>
        <label>Lifecycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                    <default>true</default>
                    <label>Plan</label>
                </value>
                <value>
                    <fullName>Assess</fullName>
                </value>
                <value>
                    <fullName>Enable</fullName>
                </value>
                <value>
                    <fullName>Enhance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Likelihood_of_churn__c</fullName>
        <description>How likely is this deal to churn?</description>
        <inlineHelpText>How likely do you think this deal is to experience churn?</inlineHelpText>
        <label>Likelihood of Churn</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>85%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedIn_Perception__c</fullName>
        <inlineHelpText>Where do they find value?  What are some objections to spending with LinkedIn/</inlineHelpText>
        <label>LinkedIn Perception</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LinkedIn_s_Role__c</fullName>
        <inlineHelpText>How can LinkedIn help his agency in their pursuits</inlineHelpText>
        <label>LinkedIn&apos;s Role</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Objectives__c</fullName>
        <inlineHelpText>The strategic objective of the CMO</inlineHelpText>
        <label>Marketing Objectives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Programs__c</fullName>
        <inlineHelpText>Describe any innovative or custom initiatives and publishers/vendors they worked with</inlineHelpText>
        <label>Marketing Programs</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Support__c</fullName>
        <inlineHelpText>Specifically describe how marketing can help you achieve these goals</inlineHelpText>
        <label>Marketing Support Needed</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meaningful_Conversation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC Enhancement requested by Mike Gettman. Please refer the Release Component RC-32335 link below. 
https://linkedin.my.salesforce.com/a1W3200000EWJOz</description>
        <inlineHelpText>Signals meaningful conversation between customer and account team &gt;60 days</inlineHelpText>
        <label>Meaningful Conversation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Media_Mix__c</fullName>
        <inlineHelpText>Describe the allocation of their budget across various media channels</inlineHelpText>
        <label>Media Mix</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Media_Partners__c</fullName>
        <inlineHelpText>List top publishers by offline vs digital.  We will use this to guide our comscore lookup</inlineHelpText>
        <label>Media Partners</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mitigation_Outcome__c</fullName>
        <description>What happened after enacting this plan?</description>
        <inlineHelpText>What happened after enacting this plan?</inlineHelpText>
        <label>Mitigation Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partial Churn</fullName>
                </value>
                <value>
                    <fullName>Full Churn</fullName>
                </value>
                <value>
                    <fullName>Flat Renewal</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mitigation_Strategy__c</fullName>
        <description>Label changed as per case : 06842281</description>
        <label>Action Steps</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Advertiser_Must_Wins__c</fullName>
        <inlineHelpText>Name new advertisers</inlineHelpText>
        <label>New Advertiser Must Wins</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>This field is created for Lynda One Stack project to capture the future steps that CSM would take</description>
        <label>Next Steps</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_Char_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>case #09346536 - Customer objective char count to help RM reps</description>
        <label>Customer Objectives Char Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <description>Field used by customer success organization to define object of the success plan.</description>
        <inlineHelpText>Describe the customer&apos;s main business objective.</inlineHelpText>
        <label>Customer Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Primary_Opportunity__r.Owner.FirstName + &apos; &apos; + Primary_Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Comments__c</fullName>
        <label>Other Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <description>If “Risk Reason” is other, explain the reason</description>
        <inlineHelpText>If Risk Reason is Other, explain the reason. Otherwise, leave this blank.</inlineHelpText>
        <label>Other Risk Reason</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Sub_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case#08688410: Retiring Field as requested.</description>
        <label>zOther Sub Admin</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Plan_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Plans (Other Sub Admin)</relationshipLabel>
        <relationshipName>Account_Plans4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Support_Needed__c</fullName>
        <inlineHelpText>Describe any other support you need across the organization</inlineHelpText>
        <label>Other Support Needed</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Technical_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case#08688410: Retiring Field as requested.</description>
        <label>zOther Technical Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Plan_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Plans (Other Technical Contact)</relationshipLabel>
        <relationshipName>Account_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overcome_Challenges__c</fullName>
        <inlineHelpText>Describe how our offering and product mix can help this LOB overcome challenges &amp; save money</inlineHelpText>
        <label>Overcome Challenges</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Dynamics_Id__c</fullName>
        <description>05Aug2018 ORBIT-3623: Dynamics Id of the Account Plan Owner</description>
        <formula>Owner:User.Dynamics_Id__c</formula>
        <inlineHelpText>Dynamics Id of the Account Plan Owner.</inlineHelpText>
        <label>Owner Dynamics Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName + &apos; &apos; +  Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Orbit_Ramped__c</fullName>
        <description>Checks if the current owner of the Account Plan is Orbit Ramped user. #Orbit</description>
        <formula>ISPICKVAL(Owner:User.RampStatus__c,&apos;Ramped&apos;)</formula>
        <label>Owner Orbit Ramped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>TEXT(Owner:User.GEO_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Segment__c</fullName>
        <formula>Owner:User.Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Segment</label>
        <type>Text</type>
    </fields>
</CustomObject>